0.2.2

* changed knots.gspline to knots_.gspline to avoid conflict with stats::knots
* fixed gplots problem

2023-08-10
* paik2 to draw Paik-Agresti diagrams for a numerical response
2023-08-05
* Improvements to `paik`
2023-06-27
* add bm25f to save benchmark results to a file
2023-03-23
* debugged() lists debugged functions
2022_08_15
* Handle Ls with NAs in waldx (and waldf)
2022_07_25
* modified lssvd to use MASS::ginv and added used of sandwich::vcovHC to waldx and waldf if robust=TRUE
2022_06_01
* Corrected bug in tab that didn't show a frequency of 0 for factor levels absent in data
2022_05_31
* new: tabf, Apply, add_faces: tabf is similar to tab in concept but returns an array of rows of a data frame with margins
* Apply works like lapply but returns the correct structure, like that of its argument
2022_05_25
* added tps, tps_ and tpg, to update trellis settings without resetting other parameters as gd and td do
2022_05_17
* added 'robust' and 'type' to getFix.lm and to waldx
2022_05_12
* improved identification of non-estimable rows of hypothesis L matrix
2022_05_09
* improved behaviour of wald with waldx for singular models 
2022_04_27
* add p-values to as.data.frame.wald
2022_04_26
* sort input variables to ensure that the prediction fram has factors in their internal order, not the order of appearance in the data
2022_04_21
* fixed bug in pred.grid
2022_02_07
* added 'pred.grid', an easier version of expand.grid for plotting predicted values from a fitted model
2022_01_29
* added 'esac': equivalent to nested ifelse statements (see also case for a different syntax) 
2022_01_27
* added napply to allow lapply to have access to names of elements of list used as an argument
2022_01_02
* linked 'tablemissing_' to naniar::gg_miss_upset
2021_10_09
* as.data.frame.wald includes the original wald object as the 'wald' attribute of the returned object
2021_08_06
* added getFix.lmerMod and getFix.glmerMod
2021_07_02