@@ -2,7 +2,7 @@ Package: spida2
 Type: Package
 Title: Collection of tools developed for the Summer Programme in Data Analysis 2000-2012
 Version: 0.2.2
-Date: 2024-07-07
+Date: 2024-07-08
 Author: Georges Monette [aut, cre], 
   John Fox [aut], 
   Michael Friendly [aut], 
